testfx/errors/error_tests/edge_16_correct_if_else.fx
// 测试: 正确的 FLYUX if-else 语法（应该通过）
x := 10
if (x > 5) {
    println("big")
} {
    println("small")
}
